[gd_scene load_steps=90 format=3 uid="uid://cq33pdvmt76l1"]

[ext_resource type="Script" uid="uid://ckwk3h2e5nal" path="res://scripts/fly.gd" id="1_fojns"]
[ext_resource type="Texture2D" uid="uid://bihceaqfc1usf" path="res://Images/Fly/Enemy1-AttackV2.png" id="2_01udg"]
[ext_resource type="Texture2D" uid="uid://o4kofwpdtkal" path="res://Images/Fly/Enemy1-Charge-Anticipation.png" id="2_fojns"]
[ext_resource type="Texture2D" uid="uid://bkfrmfy7c6h72" path="res://Images/Fly/Enemy1-Charge.png" id="3_5x3xq"]
[ext_resource type="Texture2D" uid="uid://uxyexq8a4ibp" path="res://Images/Fly/Enemy1-HitStun.png" id="4_s5gnq"]
[ext_resource type="Texture2D" uid="uid://omxt6ed3tlnq" path="res://Images/Fly/Enemy1-StunLoop.png" id="5_ovf6i"]
[ext_resource type="Texture2D" uid="uid://dxgf2bs6q7br" path="res://Images/Fly/Enemy1-DieV2.png" id="6_d3slb"]
[ext_resource type="Texture2D" uid="uid://i6x5nxss3jw" path="res://Images/Fly/Enemy1-Hit.png" id="8_lby2r"]
[ext_resource type="Texture2D" uid="uid://da7dtbn6gn1fk" path="res://Images/Fly/Enemy1-FlyIdle.png" id="9_4msbd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o1pdl"]
atlas = ExtResource("2_01udg")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhbft"]
atlas = ExtResource("2_01udg")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fne64"]
atlas = ExtResource("2_01udg")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_omitx"]
atlas = ExtResource("2_01udg")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yddi"]
atlas = ExtResource("2_01udg")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_84m8i"]
atlas = ExtResource("2_01udg")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t26ii"]
atlas = ExtResource("3_5x3xq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wumdx"]
atlas = ExtResource("3_5x3xq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcrdm"]
atlas = ExtResource("3_5x3xq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6xej"]
atlas = ExtResource("3_5x3xq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_maxbx"]
atlas = ExtResource("4_s5gnq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5yk3"]
atlas = ExtResource("4_s5gnq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6eyn"]
atlas = ExtResource("4_s5gnq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rawwb"]
atlas = ExtResource("4_s5gnq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xfqj"]
atlas = ExtResource("4_s5gnq")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_115hb"]
atlas = ExtResource("4_s5gnq")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5qej"]
atlas = ExtResource("4_s5gnq")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nwmb"]
atlas = ExtResource("4_s5gnq")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkgci"]
atlas = ExtResource("4_s5gnq")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6axht"]
atlas = ExtResource("4_s5gnq")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu5cp"]
atlas = ExtResource("4_s5gnq")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tp6y"]
atlas = ExtResource("4_s5gnq")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrmfh"]
atlas = ExtResource("5_ovf6i")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l855u"]
atlas = ExtResource("5_ovf6i")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cl3bh"]
atlas = ExtResource("5_ovf6i")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv2et"]
atlas = ExtResource("5_ovf6i")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ptim"]
atlas = ExtResource("5_ovf6i")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_reyt8"]
atlas = ExtResource("5_ovf6i")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru8fr"]
atlas = ExtResource("5_ovf6i")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cdwr"]
atlas = ExtResource("5_ovf6i")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjjs7"]
atlas = ExtResource("5_ovf6i")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwohp"]
atlas = ExtResource("5_ovf6i")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn63n"]
atlas = ExtResource("5_ovf6i")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qshwp"]
atlas = ExtResource("5_ovf6i")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5q2h"]
atlas = ExtResource("6_d3slb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxe2r"]
atlas = ExtResource("6_d3slb")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4omq"]
atlas = ExtResource("6_d3slb")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4hry"]
atlas = ExtResource("6_d3slb")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5bsh"]
atlas = ExtResource("6_d3slb")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lc0v"]
atlas = ExtResource("6_d3slb")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf4aw"]
atlas = ExtResource("6_d3slb")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f2eo"]
atlas = ExtResource("6_d3slb")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4ghs"]
atlas = ExtResource("6_d3slb")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bv46"]
atlas = ExtResource("6_d3slb")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3dhr"]
atlas = ExtResource("6_d3slb")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmu3r"]
atlas = ExtResource("2_fojns")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0sxp"]
atlas = ExtResource("2_fojns")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_01udg"]
atlas = ExtResource("2_fojns")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x3xq"]
atlas = ExtResource("2_fojns")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5gnq"]
atlas = ExtResource("2_fojns")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovf6i"]
atlas = ExtResource("2_fojns")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewvfr"]
atlas = ExtResource("6_d3slb")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_watv3"]
atlas = ExtResource("6_d3slb")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo4ni"]
atlas = ExtResource("6_d3slb")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w42qg"]
atlas = ExtResource("6_d3slb")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcb30"]
atlas = ExtResource("6_d3slb")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao7ci"]
atlas = ExtResource("6_d3slb")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2n4q"]
atlas = ExtResource("6_d3slb")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3guj"]
atlas = ExtResource("6_d3slb")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2u11"]
atlas = ExtResource("6_d3slb")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pdet"]
atlas = ExtResource("6_d3slb")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7xms"]
atlas = ExtResource("6_d3slb")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjdf0"]
atlas = ExtResource("6_d3slb")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3gty"]
atlas = ExtResource("6_d3slb")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qo45"]
atlas = ExtResource("6_d3slb")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fiqen"]
atlas = ExtResource("8_lby2r")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o281"]
atlas = ExtResource("8_lby2r")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4eov"]
atlas = ExtResource("8_lby2r")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej3y1"]
atlas = ExtResource("8_lby2r")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mxt1"]
atlas = ExtResource("9_4msbd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cadrc"]
atlas = ExtResource("9_4msbd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivn5q"]
atlas = ExtResource("9_4msbd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u4op"]
atlas = ExtResource("9_4msbd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr6uf"]
atlas = ExtResource("9_4msbd")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sec2"]
atlas = ExtResource("9_4msbd")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ovf6i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1pdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhbft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fne64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omitx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yddi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84m8i")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t26ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wumdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcrdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6xej")
}],
"loop": true,
"name": &"charge",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_maxbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5yk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6eyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rawwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xfqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_115hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5qej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nwmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkgci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6axht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu5cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tp6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrmfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l855u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cl3bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv2et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ptim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reyt8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru8fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cdwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjjs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwohp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn63n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qshwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5q2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxe2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4omq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4hry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5bsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lc0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf4aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f2eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4ghs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bv46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3dhr")
}],
"loop": false,
"name": &"charge_end",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmu3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0sxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01udg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x3xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5gnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovf6i")
}],
"loop": false,
"name": &"charge_start",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewvfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_watv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo4ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w42qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcb30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao7ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2n4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3guj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2u11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pdet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7xms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjdf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3gty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qo45")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fiqen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o281")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4eov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej3y1")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mxt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cadrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivn5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u4op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr6uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sec2")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d3slb"]
radius = 15.5
height = 94.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lby2r"]
size = Vector2(75.3287, 4.57463)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4msbd"]
size = Vector2(59, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1f2g"]
size = Vector2(426, 9.5)

[node name="Fly" type="CharacterBody2D"]
position = Vector2(695, 342)
scale = Vector2(2, 2)
script = ExtResource("1_fojns")

[node name="Sprite2D2" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1.99999, -47)
scale = Vector2(2.03844, 2.04483)
sprite_frames = SubResource("SpriteFrames_ovf6i")
animation = &"charge_end"
offset = Vector2(5, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(8.5, -48.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_d3slb")

[node name="Area2D" type="Area2D" parent="."]
priority = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(7.75006, -48.75)
rotation = 3.14159
scale = Vector2(1.2014, -7.323)
shape = SubResource("RectangleShape2D_lby2r")

[node name="HitBox" type="Area2D" parent="."]
priority = 10

[node name="CollisionBox" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-30, -48.5)
shape = SubResource("RectangleShape2D_4msbd")
disabled = true

[node name="Vision" type="Area2D" parent="."]
priority = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
position = Vector2(-202, -47.75)
shape = SubResource("RectangleShape2D_v1f2g")
debug_color = Color(0.560784, 0.560784, 0, 0.141176)

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
